# ggg

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: land-cl.yml
config/: settings.toml.example
docs/: Config.md  KeyBindings.md  Script_UserGuide.md  i18n.md
docs/dev/: ARCHITECTURE.md  Project_Structure.md
locales/en-US/: commands.ftl  dialogs.ftl  help.ftl  main.ftl  settings.ftl  status.ftl
locales/ja-JP/: commands.ftl  dialogs.ftl  help.ftl  main.ftl  settings.ftl  status.ftl
scripts/examples/: error_notifier.js  filename_cleanup.js  pixiv.js  progress_logger.js
src/: lib.rs  main.rs
src/app/: config.rs  keybindings.rs  mod.rs  settings.rs  state.rs
src/cli/: daemon.rs  error.rs  handler.rs  mod.rs  output.rs
src/download/: circuit_breaker.rs  completion_log.rs  folder_queue.rs  history.rs  http_client.rs  http_errors.rs  manager.rs  mod.rs  queue.rs  task.rs
src/file/: manager.rs  metadata.rs  mod.rs  naming.rs
src/ipc/: mod.rs  pipe_server.rs  protocol.rs
src/script/: api.rs  engine.rs  error.rs  events.rs  executor.rs  loader.rs  message.rs  mod.rs  sender.rs
src/tui/: app.rs  events.rs  mod.rs  state.rs  ui.rs
src/ui/: commands.rs
src/util/: i18n.rs  mod.rs  paths.rs  sanitize.rs  url_expansion.rs
tests/: common_utilities_test.rs  download_manager_tests.rs  integration_workflow_tests.rs
tests/common/: mod.rs
windows/ggg-dnd/: Cargo.toml
windows/ggg-dnd/src/: drop_target.rs  ipc_client.rs  main.rs  window.rs
