[package]
name = "ggg"
version = "0.1.0"
edition = "2021"
authors = ["yuinshielAs"]
description = "Great Grimoire Grabber - A classic-style download manager"
license = "MIT"
repository = "https://github.com/yuiAs/ggg"
homepage = "https://github.com/yuiAs/ggg"

[[bin]]
name = "ggg"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream", "bracketed-paste"] }
unicode-width = "0.1"
textwrap = "0.16"

# HTTP
reqwest = { version = "0.12", features = ["stream", "cookies", "gzip", "brotli", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# JavaScript Engine - Phase 3
# Using rustyscript 0.12.3 (latest) - attempting to resolve previous dependency conflicts
rustyscript = { version = "0.12", features = ["web_stub", "fs_import"] }

# Serialization
# Using 1.0.219 - minimum version required by deno_ast, may fix swc_config issue
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# File handling
filetime = "0.2"
chrono = { version = "0.4", features = ["serde"] }

# Utility
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-appender = "0.2"
regex = "1"
dirs = "5.0"
base64 = "0.22"

# Internationalization (i18n)
fluent = "0.16"
fluent-bundle = "0.15"
intl-memoizer = "0.5"
unic-langid = "0.9"

# CLI
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }

[dev-dependencies]
# Async testing
tokio = { version = "1", features = ["full", "test-util"] }

# HTTP mocking
wiremock = "0.6"

# Better assertions
pretty_assertions = "1.4"

# Temporary files
tempfile = "3.8"
serial_test = "3.2.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_Shell"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
