[workspace]
members = [".", "windows/ggg-dnd"]
resolver = "2"

[package]
name = "ggg"
version = "0.2.0"
edition = "2024"
authors = ["yuinshielAs"]
description = "Great Grimoire Grabber - A classic-style download manager"
license = "MIT"
repository = "https://github.com/yuiAs/ggg"
homepage = "https://github.com/yuiAs/ggg"

[[bin]]
name = "ggg"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream", "bracketed-paste"] }
unicode-width = "0.2"
textwrap = "0.16"

# HTTP
reqwest = { version = "0.13", features = ["stream", "cookies", "gzip", "brotli", "rustls"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# JavaScript Engine - Phase 3
# Using rustyscript 0.12.3 (latest) - attempting to resolve previous dependency conflicts
rustyscript = { version = "0.12", features = ["web_stub", "fs_import"] }

# Serialization
# Pinned: swc_config 3.0.0 / swc_common 9.2.0 use serde::__private (removed in serde >=1.0.222)
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# File handling
filetime = "0.2"
chrono = { version = "0.4", features = ["serde"] }

# Utility
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-appender = "0.2"
regex = "1"
dirs = "6.0"
base64 = "0.22"

# Internationalization (i18n)
fluent = "0.17"
fluent-bundle = "0.16"
intl-memoizer = "0.5"
unic-langid = "0.9"

# CLI
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }

[dev-dependencies]
# Async testing
tokio = { version = "1", features = ["full", "test-util"] }

# HTTP mocking
wiremock = "0.6"

# Better assertions
pretty_assertions = "1.4"

# Temporary files
tempfile = "3.8"
serial_test = "3.2.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_System_Threading"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
