[package]
name = "ggg-dnd"
version = "0.1.0"
edition = "2021"
authors = ["yuinshielAs"]
description = "ggg DnD Helper - Windows GUI for drag & drop URL forwarding"
license = "MIT"

[[bin]]
name = "ggg-dnd"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_SystemServices",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Globalization",
    "Win32_UI_Input_KeyboardAndMouse",
] }
windows-core = "0.62"
